--- a/myappproject/app/src/main/res/layout/activity_occupation_detail.xml
+++ b/myappproject/app/src/main/res/layout/activity_occupation_detail.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/comment_foot"
+        android:layout_alignParentTop="true"
         >
         <com.jaydenxiao.common.commonwidget.XListView
             android:id="@+id/occupation_list"
