--- a/myappproject/app/src/main/res/layout/occupationfooterlayout.xml
+++ b/myappproject/app/src/main/res/layout/occupationfooterlayout.xml
@@ -15,11 +15,86 @@
             android:layout_height="@dimen/margin_1px"
             android:background="@color/line_bg"
             ></View>
-        <RelativeLayout
+         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white"
             >
+
+            <EditText
+                android:id="@+id/comment_edit_tip"
+                android:layout_width="@dimen/margin_230"
+                android:layout_height="@dimen/margin_30"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_centerVertical="true"
+                android:textColor="@color/color_33"
+                android:textColorHint="@color/color_99"
+                android:textSize="@dimen/textsize12"
+                android:hint="@string/comment_str"
+                android:paddingLeft="@dimen/margin_6"
+                android:background="@drawable/comment_bg_shape"
+                android:textCursorDrawable="@drawable/color_cursor"
+                />
+
+             <LinearLayout
+                 android:layout_width="wrap_content"
+                 android:layout_height="@dimen/margin_50"
+                 android:orientation="horizontal"
+                 android:layout_alignParentRight="true"
+                 android:layout_centerVertical="true"
+                 android:layout_marginRight="@dimen/margin_15"
+                 >
+
+                 <RelativeLayout
+                     android:id="@+id/comment_re"
+                     android:layout_width="wrap_content"
+                     android:layout_height="match_parent"
+                     android:layout_gravity="center_vertical"
+                     >
+                  <ImageView
+                     android:id="@+id/comment_img"
+                     android:layout_width="@dimen/margin_20"
+                     android:layout_height="@dimen/margin_20"
+                     android:src="@mipmap/tb_bottom_offen"
+                      android:layout_centerVertical="true"
+                     />
+                     <TextView
+                         android:id="@+id/unread_msg"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_toRightOf="@+id/comment_img"
+                         android:layout_marginLeft="-10dp"
+                         android:layout_marginTop="8dp"
+                         android:text="1000"
+                         android:gravity="center"
+                         android:textSize="@dimen/textsize10"
+                         android:textColor="@color/white"
+                         android:paddingLeft="@dimen/margin_3"
+                         android:paddingRight="@dimen/margin_3"
+                         android:background="@drawable/unread_bg"
+                         android:visibility="visible"
+                         />
+                 </RelativeLayout>
+
+                 <ImageView
+                     android:id="@+id/zan_img"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:src="@mipmap/express_zan_no"
+                      android:layout_marginLeft="@dimen/margin_15"
+                      android:layout_gravity="center_vertical"
+                     />
+
+                 <ImageView
+                     android:id="@+id/express_share"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:src="@mipmap/express_share"
+                     android:layout_marginLeft="@dimen/margin_15"
+                     android:layout_gravity="center_vertical"
+                     />
+             </LinearLayout>
+             
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
